--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# user defined
+pretrained_models/
+samples/
+logs/
+checkpoints/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
